fable/test/valid/data_17.f
      program prog
      complex cnum
      data cnum /(1,2)/
      write(6, *) cnum
      end
