fable/test/syntax_error/bad_complex_literal_1.f
      program prog
      complex cnum
      data cnum /((1),2)/
      end
